@@ -1,16 +1,22 @@
 package com.example.worklogui;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Locale;
 
 public class AppConstants {
 
     // App title (for windows/dialogs)
     public static final String APP_TITLE = "WorkLog";
+    public static final String CURRENT_VERSION = "1.0.0"; // or 1.0.1 etc.
+    public static final String GITHUB_RELEASE_API = "https://api.github.com/repos/TashiRabten/WorkLogUI/releases/latest";
 
     // File paths
-    public static final Path WORKLOG_PATH = Path.of("worklog.json");
-    public static final Path RATES_PATH = Path.of("company-rates.json");
+        public static final Path EXPORT_FOLDER = Paths.get(System.getProperty("user.home"), "Documents", "WorkLog", "exports");
+        public static final Path WORKLOG_PATH = Paths.get(System.getProperty("user.home"), "Documents", "WorkLog", "worklog.json");
+        public static final Path RATES_PATH = Paths.get(System.getProperty("user.home"), "Documents", "WorkLog", "company-rates.json");
+
+
 
     // Backup paths (optional safety backups)
     public static final Path BACKUP_WORKLOG_PATH = Path.of("backup", "worklog-backup.json");
